# serializer version: 1
# name: test_fan_states[fan_devices.json-platforms0][fan.hob_with_extraction_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.hob_with_extraction_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan',
    'unique_id': 'DummyAppliance_74-fan_readonly',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_states[fan_devices.json-platforms0][fan.hob_with_extraction_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hob with extraction Fan',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.hob_with_extraction_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_states[fan_devices.json-platforms0][fan.hob_with_extraction_fan_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.hob_with_extraction_fan_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan',
    'unique_id': 'DummyAppliance_74_off-fan_readonly',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_states[fan_devices.json-platforms0][fan.hob_with_extraction_fan_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hob with extraction Fan',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.hob_with_extraction_fan_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fan_states[fan_devices.json-platforms0][fan.hood_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.hood_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': 'fan',
    'unique_id': 'DummyAppliance_18-fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_states[fan_devices.json-platforms0][fan.hood_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hood Fan',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.hood_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fan_states_api_push[platforms0][fan.hood_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.hood_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': 'fan',
    'unique_id': 'DummyAppliance_18-fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_states_api_push[platforms0][fan.hood_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hood Fan',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 25.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.hood_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
